$Id: ChangeLog,v 1.183 2007-11-11 13:43:08 cmatsuoka Exp $

Stable versions
---------------

2.5.0 ():
	- remove DMP-specific effect from MOD loader
	- extend full sample loops to Noisetracker and Startrekker
	- FLT loader recognizes Startrekker FLTM modules (only PCM channels)
	- implement support for Startrekker/ADSC AM synth instruments
	- fixed cast to signed type in finetune display
	- fixed Protracker 3 IFFMODL loader (process VERS chunk manually)
	- added support to full sample loops in the Protracker 3 loader
	- added PulseAudio driver (using the simple API)
	- remove restrictive test for Soundtracker modules (fixes
	  99redballoons.mod, reported by Adric Riedel)
	- fixed infinite loop control for jos-dr4k.xm (allows full replay
	  time of 11:04 for Global Trash 3.mod, reported by Adric Riedel)
	- use floating point period generation for the software mixer
	- fix S3M tempo/bpm setting effect (fixes seaside_hotel.s3m)
	- MinGW32 build fixes and new Windows driver (based on MikMod)

2.4.1 (20071029):
	- fixed portamento after keyoff problem in metamorph_part_ii.xm
	  where new note is not recognized (reported by Adric Riedel)
	- implement Protracker-style sample loops: first play entire sample,
	  then play the loop (needed to play MeNoWantMiseria.mod correctly,
	  reported by Adric Riedel)
	- fixed finetune test in UNIC Tracker detection to prevent false
	  positive with all that she wants.mod (reported by Adric Riedel)
	- fixed test for ?CHN and ??CH TakeTracker/FastTracker2 modules
	- fixed data type in the XM loader to work in 64-bit systems
	- don't ignore effect on event with invalid instrument (fixes tempo
	  in 39.mod pos 11, reported by Adric Riedel)
	- removed restrictive tests for Ultimate Soundtracker (false negative
	  in Karsten Obarski's sleepwalk and others, reported by Adric Riedel)
	- minimum sample size changed from 5 to 4 bytes, childhood.it actually
	  has 4 byte samples (reported by Adric Riedel)