@@ -1,12 +1,13 @@
 # Extended Module Player src/drivers/Makefile
-# $Id: Makefile,v 1.12 2007-11-09 02:09:54 cmatsuoka Exp $
+# $Id: Makefile,v 1.13 2007-11-11 16:06:52 cmatsuoka Exp $
 
 TOPDIR	= ../..
 XCFLAGS	= -I../include
 OBJS	= file.o wav.o callback.o
 DRV	= file.c oss_mix.c hpux.c bsd.c solaris.c oss_seq.c alsa.c alsa05.c \
 	  esd.c sgi.c os2_dart.c netbsd.c openbsd.c aix.c nas.c arts.c qnx.c \
-	  win32.c callback.c wav.c osx.c beos.c alsa_seq.c pulseaudio.c
+	  win32.c callback.c wav.c osx.c beos.c alsa_seq.c pulseaudio.c \
+	  amiga.c
 DFILES	= Makefile $(DRV) debug.c
 DDIRS	=
 LIB	= $(TOPDIR)/lib/libxmp.a
@@ -28,14 +29,5 @@ $(DRV:.c=.o): Makefile
 arts.o: arts.c
 	$(CC) $(CFLAGS) $(XCFLAGS) `artsc-config --cflags` -o $@ arts.c
 
-arts.so: arts.o
-	ld -shared -o $@ $+ -lartsc
-
-esd.so: esd.o
-	ld -shared -o $@ $+ -lesd
-	
-nas.so: nas.o
-	ld -shared -o $@ $+ -laudio $(X_LIB) -lXt -lX11
-	
 include depend
 
