@@ -5,7 +5,7 @@
  * under the terms of the GNU General Public License. See doc/COPYING
  * for more information.
  *
- * $Id: openbsd.c,v 1.8 2007-10-22 10:13:49 cmatsuoka Exp $
+ * $Id: openbsd.c,v 1.9 2007-11-11 16:06:52 cmatsuoka Exp $
  */
 
 /* This should work for OpenBSD */
@@ -81,8 +81,8 @@ static int setaudio(struct xmp_options *o)
     char **parm = o->parm;
 
     parm_init();
-    chkparm1("gain", gain = atoi (token));
-    chkparm1("buffer", bsize = atoi (token));
+    chkparm1("gain", gain = strtoul(token, NULL, 0));
+    chkparm1("buffer", bsize = strotoul(token, NULL, 0));
     parm_end();
 
     if (gain < AUDIO_MIN_GAIN)
