@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.183 2007-11-11 13:43:08 cmatsuoka Exp $
+$Id: ChangeLog,v 1.184 2007-11-11 16:06:52 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -19,6 +19,7 @@ Stable versions
 	- use floating point period generation for the software mixer
 	- fix S3M tempo/bpm setting effect (fixes seaside_hotel.s3m)
 	- MinGW32 build fixes and new Windows driver (based on MikMod)
+	- merged Amiga AHI driver written by Lorence Lombardo
 
 2.4.1 (20071029):
 	- fixed portamento after keyoff problem in metamorph_part_ii.xm
